# validation-service

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  manage.py  pyproject.toml
backend/: .gitignore  alembic.ini  pyproject-back.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e83562c1f726_init_db.py
backend/csv/: actions.csv  globals.csv
backend/src/: health.py  main.py  router.py
backend/src/auth/: api.py  auth_bearer.py  crud.py  models.py
backend/src/conf/: _settings.py
backend/src/db/: __init__.py  mysql_client.py  sqlite_client.py
backend/src/models/: __init__.py  rules.py  validations.py
backend/src/rules/: api.py  models.py
backend/src/services/: __init__.py  auth_service.py  db_service.py  google_sheets_service.py  validation_service.py
backend/src/users/: api.py  crud.py  models.py
backend/src/validations/: api.py  models.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/components/auth/: ProtectedPage.tsx
frontend/components/forms/: LoginForm.tsx  RulesForm.tsx
frontend/components/providers/: AuthProvider.tsx  index.tsx
frontend/domain/types/: index.ts
src/: main.py
src/conf/: __init__.py  _settings.py
