[project]
name = ""
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-sdk",
    "typer>=0.16.0",
]



[dependency-groups]
dev = [
    "icecream>=2.1.5",
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
show_error_code_links = true
color_output = true
show_absolute_path = true
plugins = ["returns.contrib.mypy.returns_plugin"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "build/",
    "dist/",
    "venv/",
    "\\.venv/",
    "tests/helpers/"
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4



[tool.ruff.lint]
allowed-confusables = ["−", "ρ", "∗"]
fixable = ["ALL"]
ignore = []
select = ["E4", "E7", "E9", "F", "B", "Q"]
unfixable = []



[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "F403"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
addopts = "--cov=src--cov-report=term-missing"



[tool.ty.rules]
unresolved-reference = "ignore"
unresolved-attribute = "ignore"
possibly-unbound-attribute = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
missing-argument = "ignore"

[tool.uv.sources]
python-sdk = { git = "https://github.com/shakedguy/python-sdk.git" }
